dhis2-setup/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhis
spec:
  tls:
    - hosts:
      - dhis.kipkurgat.com 
      secretName: server-call 
  ingressClassName: public 
  rules:
  - host: dhis.kipkurgat.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web 
            port:
              number: 8080
